--- a/src/styles/_props.scss
+++ b/src/styles/_props.scss
@@ -18,8 +18,7 @@
   --uv-logo-hover-bg-color: var(--uv-primary-dark);
 
   // MAIN NAV
-  --uv-main-nav-link-color: #eee;
-  --uv-main-nav-link-hover-bg-color: #000;
+  --uv-main-nav-link-color: var(--uv-white);
 
   // HOMEPAGE
 }
