--- a/src/pages/blog/page/[page].astro
+++ b/src/pages/blog/page/[page].astro
@@ -7,9 +7,10 @@ import BlogPostItem from '../../../components/BlogPostItem.astro';
 
 // paginate:any is just to stop TS error which isn't a real error in Astro
 export async function getStaticPaths({ paginate }: { paginate: any }) {
-  const posts = (await getCollection('blog')).sort(
-    (a, b) => b.data.date.getTime() - a.data.date.getTime(),
-  );
+  const posts = await getCollection('blog', ({ data }) => {
+    return data.language == 'en';
+  });
+  posts.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 
   return paginate(posts, { pageSize: siteConfig.blog.postsPerPage });
 }
